; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_schedule.c_linux_send_sig.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_schedule.c_linux_send_sig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { %struct.thread* }
%struct.thread = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @linux_send_sig(i32 %0, %struct.task_struct* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.task_struct*, align 8
  %5 = alloca %struct.thread*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.task_struct* %1, %struct.task_struct** %4, align 8
  %6 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %7 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %6, i32 0, i32 0
  %8 = load %struct.thread*, %struct.thread** %7, align 8
  store %struct.thread* %8, %struct.thread** %5, align 8
  %9 = load %struct.thread*, %struct.thread** %5, align 8
  %10 = getelementptr inbounds %struct.thread, %struct.thread* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @PROC_LOCK(i32 %11)
  %13 = load %struct.thread*, %struct.thread** %5, align 8
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @tdsignal(%struct.thread* %13, i32 %14)
  %16 = load %struct.thread*, %struct.thread** %5, align 8
  %17 = getelementptr inbounds %struct.thread, %struct.thread* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @PROC_UNLOCK(i32 %18)
  ret void
}

declare dso_local i32 @PROC_LOCK(i32) #1

declare dso_local i32 @tdsignal(%struct.thread*, i32) #1

declare dso_local i32 @PROC_UNLOCK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
